fix: correcao em logica de end-points